[package]
name = "docker-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.23"
reqwest = {version="0.11.11", features=["blocking"]}
serde_json = "1.0"
serde = {version="1.0", features=["derive"]}
regex = "1"
rand = "0.8"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"
